clock css js update

--- a/index.html
+++ b/index.html
@@ -4,27 +4,73 @@
     <title>Something</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="newClock.css" />
   </head>
 
   <body>
-    <div class="js-clock">
+    <!-- <div class="js-clock">
       <h1>00:00</h1>
+    </div> -->
+
+    <div class="css_top_container">
+      <div class="outside_number left_hour_css_clock">
+        <div id="hour_ones_top" class="zero_top3"></div>
+        <div id="hour_ones_bottom" class="zero_bottom3"></div>
+      </div>
+      <div class="spacer1"></div>
+      <div class="outside_number right_hour_css_clock">
+        <div id="hour_tens_top" class="zero_top3"></div>
+        <div id="hour_tens_bottom" class="zero_bottom3"></div>
+      </div>
+
+      <div class="spacer2 am_or_pm">
+        <p class="AMorPM" id="AMorPM">MM</p>
+      </div>
+
+      <div class="outside_number left_minute_css_clock">
+        <div id="minute_ones_top" class="zero_top2"></div>
+        <div id="minute_ones_bottom" class="zero_bottom2"></div>
+      </div>
+      <div class="spacer1"></div>
+      <div class="outside_number right_minute_css_clock">
+        <div id="minute_tens_top" class="zero_top2"></div>
+        <div id="minute_tens_bottom" class="zero_bottom2"></div>
+      </div>
+
+      <div class="spacer1"></div>
+
+      <div class="outside_number left_second_css_clock">
+        <div id="second_ones_top" class="zero_top1"></div>
+        <div id="second_ones_bottom" class="zero_bottom1"></div>
+      </div>
+      <div class="spacer1"></div>
+      <div class="outside_number right_second_css_clock">
+        <div id="second_tens_top" class="zero_top1"></div>
+        <div id="second_tens_bottom" class="zero_bottom1"></div>
+      </div>
     </div>
+
+    <span class="js-weather weather"></span>
 
     <form class="js-form form">
       <input type="text" placeholder="What is your name?" />
     </form>
 
     <h4 class="js-greetings greetings"></h4>
-    <form class="js-toDoForm">
-      <input type="text" placeholder="Write a to do " />
+
+    <form class="js-toDoForm todo">
+      <input type="text" placeholder="Write a to do" />
     </form>
 
-    <ul class="js-toDoList"></ul>
+    <div class="toDoContainer">
+      <ul class="js-toDoList toDoList"></ul>
+    </div>
 
-    <script src="clock.js"></script>
+    <script src="newClock.js"></script>
     <script src="gretting.js"></script>
     <script src="todo.js"></script>
-    <script src="bg.js"></script>
+    <script src="weather.js"></script>
+
+    <!-- <script src="bg.js"></script> -->
   </body>
 </html>
